...
    var selectedGenre by remember { mutableStateOf("") }
    var description by remember { mutableStateOf("") }
    var genreExpanded by remember { mutableStateOf(false) }
    var recordLabelExpanded by remember { mutableStateOf(false) }
    var isCreating by remember { mutableStateOf(false) }

    val genres = listOf("Classical", "Salsa", "Rock", "Folk")
    val recordLabels = listOf("Sony Music", "EMI", "Discos Fuentes", "Elektra", "Fania Records")
    
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text(context.getString(R.string.title_create_album)) },
                navigationIcon = {
...
